# base-port

./: .gitignore  Makefile  README.md
.devcontainer/: .bashrc_private  devcontainer.json  docker-compose.yml
docker/devcontainer/: Dockerfile
docker/tools/: Dockerfile
plugin/alb/: README.md  ingress-prd-sample.yaml
plugin/ascp/: README.md
plugin/cloudwatch/: README.md
plugin/ebs/: README.md
plugin/efs/: README.md  setup.sh
plugin/eks-auto-mode/: README.md
plugin/hpa/: README.md
plugin/karpenter/: .gitignore  README.md  delete.sh  setup-v0.37.0.sh  setup.sh
plugin/s3/: README.md
plugin/secrets-manager/: README.md
scripts/alb/: README.md  ingress-dev-sample.yaml  ingress-prd-sample.yaml
scripts/argocd/: README.md  port-forward.sh
scripts/ebs/: gp3.yaml
scripts/efs/: README.md  sc.yaml  setup.sh
scripts/hpa/: README.md
scripts/karpenter/: README.md  apply.sh  delete.sh  setup.sh
scripts/keycloak/: README.md  keycloak.yaml
scripts/secrets-manager/: README.md
scripts/tools/: build.sh  run.sh
service/argocd/: README.md  ingress.yaml
service/keycloak/: README.md  keycloak.yaml
service/keycloak-sample-app/: README.md  main.py  pyproject.toml  sample_env
service/keycloak-sample-app/app/: env.py
service/keycloak-sample-app/templates/: base.html  code.html
service/oauth2-proxy-sample/: README.md
service/opencost/: README.md  cloud-integration.json  ingress.yaml
service/tools/: README.md  build.sh  delete.sh  run.sh
terraform/: .gitignore
workspaces/: all.code-workspace  keycloak-sample-app.code-workspace
(+177 files in other folders)
